# Panacea-OpenEnv

./: .dockerignore  .env.example  .gitignore  Blog.md  Dockerfile  README.md  docker-compose.yml  implementaionplan  prevalidation.py  pyproject.toml  requirements-hf.txt  requirements.txt  serve_local.py  telemetry.db  test_episode.sh
.claude/: settings.local.json
content/panacea_oversight_model/: adapter_config.json
data/: curriculum_log.jsonl  pomdp_trajectories.jsonl  pomdp_trajectories_smoke.jsonl
docs/: overview.md  pitch_script.md
notebooks/: baseline_eval.py  finetune_whisper_medical.py  generate_medical_speech_data.py  onsite_training.py  panacea_grpo_training.ipynb  panacea_grpo_training.py
openenv_panacea/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  reward.py  scenario_generator.py  tool_backends.py
openenv_panacea/server/: app.py  panacea_environment.py
scripts/: demo.py  demo_hackathon.py  generate_sft_data.py  train_oversight.py
server/: app.py
src/: main.py
src/agents/: __init__.py  agent_council.py  consult_bridge.py  department.py  hospital_graph.py  hospital_state.py  intake_nurse.py  nodes.py  orchestrator.py  oversight.py  oversight_core.py  router_agent.py  smart_router.py  specialist_gpt.py  state.py  sub_agent.py
src/architecture/: event_bus.py
src/backend/: database.py  drift_engine.py  fhir_database.py  main.py  seed_data.py  telemetry.py
src/database/: __init__.py  mongo_client.py  seed_mongo.py
src/environment/: env.py  reward.py  tool_backends.py
tests/: test_evidence_bonus.py
(+18 files in other folders)
